--- a/fonte6/package.json
+++ b/fonte6/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/http": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "cordova-plugin-advanced-http": "2.0.9",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
